[package]
name = "tree-sitter-usd"
description = "usd grammar for the tree-sitter parsing library"
version = "1.0.0"
keywords = ["incremental", "parsing", "usd"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/ColinKennedy/tree-sitter-usd"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "1.0"
